Fixed hover effect not showing on dark colours

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -36,7 +36,7 @@ section {
 
 .navButton {
     color: white;
-    height: inherit;
+    height: 40px;
     display: inline-flex;
     align-items: center;
     justify-content: center;
